# earthquake-alert

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  README.md
.github/workflows/: pages.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs  models.rs
backend/src/db/: mod.rs  subscription_store.rs
backend/src/routes/: subscribe.rs
backend/src/services/: bark_notifier.rs  earthquake_monitor.rs  mod.rs
backend/src/utils/: distance.rs  geohash.rs  intensity.rs  mod.rs
deploy/cloudflare-worker/: index.js
web/: index.html
worker/: index.js  wrangler.toml
worker/static/: index.html
